--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 		outline:none;
 		font-family: 'bahnschrift',sans-serif,Programme;
 		font-size:5vw;
+		-webkit-tap-highlight-color: transparent;
 	}
 	#desktopLimit{
 		display: none;
@@ -24,8 +25,16 @@
 	body {
 		color: #fbfbfb;
 		background: #001f3f;
-		margin: 0px;
+		margin: 0;
 		overflow-x: hidden;
+	}
+	.noSelect {
+		-webkit-touch-callout: none;
+		-webkit-user-select: none;
+		-khtml-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
+		user-select: none;
 	}
 	#mainInput {
 		margin: 3vw;
@@ -37,15 +46,25 @@
 		box-shadow: 0px 0px 5vw rgba(255, 255, 255, 0);
 		padding: 2vw;
 	}
+	#mainInput.protected {
+		border-color: white;
+		color: transparent !important;
+		background: black;
+		text-decoration: line-through;
+		text-decoration-color: currentcolor;
+		text-decoration-color: white;
+	}
 	#mainInput:focus, #mainInput.active{
 		color: #0074D9;
 		box-shadow: 0px 0px 5vw rgba(0, 0, 0, 0.4);
 	}
-	.fa-bars{
+	.fa-chevron-up{
 		font-size: 6vw;
 		color: #0074d9;
 		cursor: pointer;
 		vertical-align: middle;
+		transition: 0.3s;
+		transition-delay: 0.4s;
 	}
 	#addInput {
 		background-color: #0074D9;
@@ -81,14 +100,6 @@
 		50% {box-shadow: 0px 0px 6vw currentColor;}
 		100% {box-shadow: 0px 0px 5vw transparent;}
 	}
-	@media(min-width:768px){
-		section{
-			display: none !important;
-		}
-		#desktopLimit{
-			display: unset;
-		}
-	}
 	#list {
 		width: 100%;
 		position: relative;
@@ -102,29 +113,42 @@
 	}
 	#list.twoColumn{
 		text-align: left;
-		width: calc(100% + 2vw);
 	}
-	#list.twoColumn > .card{
-		width: calc(50% - 6vw);
-		margin: 0.5vw;
+	#list.twoColumn > .card {
+		width: 48vw;
 		display: inline-flex;
+		box-sizing: border-box;
 	}
+	#list.twoColumn > .card:nth-child(even) {
+		margin: 0.5vw 1.5vw 0.5vw 0.5vw;
+	}
+	#list.twoColumn > .card:nth-child(odd) {
+		margin: 0.5vw 0.5vw 0.5vw 1.5vw;
+	}
+
 	.disable{
 		opacity: 0.4;
 	}
 	.card {
 		background: #0074D9;
 		padding: 1vw 3vw 1vw 2vw;
-		margin-top: 2vw;
-		border-radius: 3vw;
+		margin: 2vw 2vw 0 2vw;
+		border-radius: 7vw;
 		color: #001f3f;
 		display: flex;
 		box-shadow: 0 0 2vw rgba(0, 0, 0, 0.17);
 		direction: ltr;
 		vertical-align: middle;
 	}
-	.card.hasTransition{
-		transition: 0.5s !important;
+	.card.selected {
+		background: red !important;
+		box-shadow: 0 0 7vw #ff3535;
+		color: white !important;
+		text-shadow: 0 0 2vw white;
+	}
+	.card.selected i.fa {
+		color: black;
+		text-shadow: 0 0 2vw black;
 	}
 	#list.direction {
 		text-align: right !important;
@@ -161,6 +185,15 @@
 		transition: 0.4s;
 		text-align: initial;
 	}
+	.LGradient {
+		content: '';
+		height: 87%;
+		width: 4vw;
+		position: absolute;
+		margin-left: -0.9vw;
+		z-index: 10;
+		border-radius: 2vw 0 0 2vw;
+	}
 	.card > i {
 		cursor: pointer;
 		color: #FFF;
@@ -171,6 +204,9 @@
 		opacity: 0.8;
 		margin-top: auto;
 		margin-bottom: auto;
+	}
+	#sidenav i.fa {
+		width: 7vw;
 	}
 	.fa-check:active{
 		transition: 0s;
@@ -217,28 +253,27 @@
 	#messageBox{
 		white-space: normal;
 		width: 93%;
-		transform: translate(-50%,-50%);
-		top: 25%;
 		background-color: rgba(255, 255, 255, 0.73);
 		line-height: 1.6;
 		text-align: justify;
 		max-height: calc(50vh - 12vw);
 		overflow: auto;
-		text-shadow: 0 0 1vw rgba(0, 0, 0, 0.34);
+		text-shadow: 0 0 2vw rgba(0, 0, 0, 0.5);
 	}
 	#messageBox > span{
 		white-space: pre-line;
 		display: block;
+		word-break: break-word;
 	}
 	#sidenav {
 		height: 0;
+		max-height: calc(60vh - 14vw) !important;
 		width: 100%;
 		position: fixed;
-		z-index: 1;
 		bottom: -14vw;
 		left: 0;
-		overflow-x: hidden;
-		transition: 0.5s;
+		overflow-x: hidden !important;
+		transition: all 0.5s;
 		padding-top: 14vw;
 		background: #001a31;
 		z-index: 105;
@@ -251,7 +286,13 @@
 	}
 	#sidenav.active{
 		bottom: 0;
-		height: 50% !important;
+		box-shadow: 0 0 3vw rgba(0, 0, 0, 0.36);
+		height: 50vh !important;
+		animation: 1.1s delay-overflow;
+	}
+	@keyframes delay-overflow {
+		from { overflow: hidden; }
+		to { overflow: auto; }
 	}
 
 	#sidenav a, #sidenav button, #iDB {
@@ -279,13 +320,13 @@
 	}
 
 	#main {
-		padding: 2vw;
 		padding-top: 0;
 	}
-	#main.active > #list > .card{
-		border-radius: 7vw;
+	#main.active .fa-chevron-up {
+		transform: rotate(180deg);
+		transition-delay: -0.1s;
 	}
-	#main.active > #list > .card > p, #main.active > #list > .card > i{
+	#main.active .card > p, #main.active .card > i{
 		opacity: 0;
 		overflow: hidden;
 	}
@@ -295,6 +336,41 @@
 	}
 	#label.active{
 		display: block;
+	}
+	#label.active > span::after{
+		animation-name: typeEffect;
+		animation-duration: 4s;
+		animation-iteration-count: infinite;
+	}
+	@-webkit-keyframes typeEffect {
+		0% {content: 'T';}
+		8% {content: 'Te';}
+		16% {content: 'Tex';}
+		25% {content: 'Text';}
+		33% {content: 'Tex';}
+		41% {content: 'Te';}
+		50% {content: 'T';}
+		58% {content: 'Te';}
+		66% {content: 'Tes';}
+		75% {content: 'Test';}
+		83% {content: 'Tes';}
+		91% {content: 'Te';}
+		100% {content: 'T';}
+	}
+	@keyframes typeEffect {
+		0% {content: 'T';}
+		8% {content: 'Te';}
+		16% {content: 'Tex';}
+		25% {content: 'Text';}
+		33% {content: 'Tex';}
+		41% {content: 'Te';}
+		50% {content: 'T';}
+		58% {content: 'Te';}
+		66% {content: 'Tes';}
+		75% {content: 'Test';}
+		83% {content: 'Tes';}
+		91% {content: 'Te';}
+		100% {content: 'T';}
 	}
 	#label > span {
 		cursor: pointer;
@@ -317,6 +393,10 @@
 	}
 	#label > span:hover{
 		border-color: white;
+	}
+	#rDB{
+		color: rgb(255, 31, 31) !important;
+		text-shadow: 0 0 3vw #000;
 	}
 	#uDT{
 		color: #24ca3a !important;
@@ -343,7 +423,9 @@
 		cursor: pointer;
 	}
 	.customButton.active{
-		display: unset;
+		display: inline-block;
+		margin: 1vw;
+		padding: 1vw 1.4vw;
 	}
 	#redScreen{
 		position: fixed;
@@ -360,6 +442,205 @@
 		text-align: center;
 		border-top: 1.5vw solid transparent;
 	}
+	.messageBoxData.inputLength {
+		width: 0;
+		display: inline-block;
+		margin-right: 8vw;
+		white-space: nowrap;
+	}
 	#boxTitle{
 		display:block;
+	}
+	#profile {
+		position: fixed;
+		top: 0;
+		right: 0;
+		z-index: 98;
+		display: grid;
+		visibility: hidden;
+		opacity: 0;
+		transition: 0.4s;
+		padding: 5vw;
+		text-shadow: 0 0 2vw rgba(0, 0, 0, 0.78);
+		width: calc(100% - 10vw);
+		overflow: auto;
+	}
+	#sidenav.active + #profile {
+		visibility: visible;
+		opacity: 1;
+	}
+	#info {
+		display: flex;
+		flex-direction: row-reverse;
+	}
+	#info > * {
+		margin: auto;
+	}
+	#name {
+		cursor: pointer;
+	}
+	#name > span {
+		max-width: 30vw;
+		white-space: nowrap;
+		display: inline-flex;
+		overflow-x: hidden;
+	}
+	#oldest {
+		text-align: left;
+		margin-top: 3vw;
+	}
+	#oldest > h2 {
+		margin-bottom: 5vw;
+		margin-top: 4vw;
+		padding-top: 1vw;
+	}
+	#oldest ul {
+		padding: 0;
+		margin: 0;
+		list-style: none;
+		display: grid;
+		margin-top: -1.6vw;
+	}
+	#oldest li {
+		margin: 0;
+		white-space: nowrap;
+		text-overflow: ellipsis;
+		overflow: hidden;
+		width: 81vw;
+		padding: 2.5vw;
+		margin-top: 2.2vw;
+	}
+	#lockScreen {
+		position: fixed;
+		display: none;
+		top: 0;
+		left: 0;
+		width: 100vw;
+		height: 100vh;
+		z-index: 999;
+	}
+	#lockScreen.active {
+		display: unset !important;
+	}
+	.developerButton {
+		display: none;
+	}
+	.developerButton * {
+		color: lime !important;
+	}
+	.developerButton.active {
+		display: block;
+		background: black;
+		width: 50vw;
+	}
+	.developerButton.title.active::before {
+		content: 'Developer tools 1.0.0';
+		display: inline-block;
+		font-size: 0.6rem;
+		position: absolute;
+		margin: -2vw 0 0 2vw;
+	}
+	@media(min-width:768px){
+		section{
+			display: none !important;
+		}
+		#desktopLimit{
+			display: unset;
+		}
+		/*.card {
+			padding: 1px 8px 1px 6px;
+			margin: 3px;
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.17);
+			width: 200px;
+			display: inline-flex;
+		}
+		* {
+			font-size: 24px;
+		}
+		.card > i {
+			font-size: 26px !important;
+			padding: 13px !important;
+			margin: -14px !important;
+			margin-top: auto !important;
+			margin-bottom: auto !important;
+		}
+		#mainInput {
+			margin: 20px;
+			border: 3px solid currentColor;
+			padding: 9px;
+		}
+		.fa-chevron-up {
+			font-size: 40px;
+			transition-delay: 0.1s;
+		}
+		#main.active .fa-chevron-up {
+			transform: rotate(90deg);
+		}
+		#addInput > span {
+			font-size: 60px;
+		}
+		#addInput {
+			width: 70px;
+			height: 70px;
+		}
+		#sidenav {
+			height: 100vh;
+			max-height: unset !important;
+			width: 450px;
+			max-width: 50%;
+			position: fixed;
+			top: 0;
+			bottom: unset;
+			left: -110%;
+			border-radius: 0;
+			padding-top: 36px;
+		}
+		#sidenav.active {
+			height: calc(100vh - 36px) !important;
+			left: 0;
+		}
+		#sidenav a, #sidenav button, #iDB {
+			padding: 10px 10px 22px 12px;
+			font-size: 22px;
+		}
+		#sidenav .closebtn {
+			right: 10px;
+			font-size: 51px;
+			padding: 0;
+		}
+		#profile {
+			z-index: 107;
+			padding: 15px;
+			min-width: calc(50% - 30px);
+			max-width: calc(100% - 480px);
+		}
+		#sidenav i.fa {
+			width: 47px;
+			text-align: center;
+		}
+		.textBox {
+			top: 50px;
+			padding: 16px;
+			border-radius: 13px;
+			box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.34);
+		}
+		#messageBox {
+			padding: 16px;
+			border-radius: 13px;
+			box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.34);
+		}
+		#label > span {
+			width: 100px;
+			height: 40px;
+			margin: 6px;
+			border-radius: 20px;
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.21);
+			border: 12px solid #001f3f;
+		}
+		#label > span::after {
+			font-size: 28px;
+		}
+		#stats {
+			background-color: rgba(255, 255, 255, 0.16);
+		}*/
 	}
